# galtzagorri

./: .gitattributes  .gitignore  .pdm-python  Makefile  README.md  copier.yml  name-slug.jinja  pyproject.toml
docs/: Makefile
makefiles/common/: environment.mk
template/: Makefile  README.md  README.md.jinja  pyproject.toml.jinja
template/makefiles/: specific.mk
template/makefiles/common/: environment.mk  package.mk
{{project_name}}/: pyproject.toml
